// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments components tests goal: render CommentItem 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="container"
      >
        <span
          class="avatar"
        >
          <img
            alt="avatar"
            src="man.png"
          />
        </span>
        <span>
          Kate
          :
        </span>
        <span>
          Hi!
        </span>
        <span
          class="btn"
        >
          X
        </span>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="container"
    >
      <span
        class="avatar"
      >
        <img
          alt="avatar"
          src="man.png"
        />
      </span>
      <span>
        Kate
        :
      </span>
      <span>
        Hi!
      </span>
      <span
        class="btn"
      >
        X
      </span>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Comments components tests goal: render Comments 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <form
          class="form"
        >
          <input
            placeholder="name"
            type="text"
            value=""
          />
          <input
            placeholder="city"
            type="text"
            value=""
          />
          <input
            placeholder="comment"
            type="text"
            value=""
          />
          <button>
            +
          </button>
        </form>
        <ul>
          <li
            class="container"
          >
            <span
              class="avatar"
            >
              <img
                alt="avatar"
                src="man.png"
              />
            </span>
            <span>
              Egor
              :
            </span>
            <span>
              Hi
            </span>
            <span
              class="btn"
            >
              X
            </span>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <form
        class="form"
      >
        <input
          placeholder="name"
          type="text"
          value=""
        />
        <input
          placeholder="city"
          type="text"
          value=""
        />
        <input
          placeholder="comment"
          type="text"
          value=""
        />
        <button>
          +
        </button>
      </form>
      <ul>
        <li
          class="container"
        >
          <span
            class="avatar"
          >
            <img
              alt="avatar"
              src="man.png"
            />
          </span>
          <span>
            Egor
            :
          </span>
          <span>
            Hi
          </span>
          <span
            class="btn"
          >
            X
          </span>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
